--- a/src/main/resources/templates/GameList.html
+++ b/src/main/resources/templates/GameList.html
@@ -42,33 +42,33 @@ Author(s): Alec Droegemeier, Jessica Frank
                         All Games
                     </button>
                 </div>
-                <div class="genre-category">
-                    <button id="action" class="mdl-button mdl-js-button mdl-button--raised genre-button">
+                <div  class="genre-category">
+                    <button name="genre" id="action" value='Action' class="mdl-button mdl-js-button mdl-button--raised genre-button">
                         Action
                     </button>
                 </div>
                 <div class="genre-category">
-                    <button id="adventure" class="mdl-button mdl-js-button mdl-button--raised genre-button">
+                    <button name="genre" id="adventure" value='Adventure' class="mdl-button mdl-js-button mdl-button--raised genre-button">
                         Adventure
                     </button>
                 </div>
                 <div class="genre-category">
-                    <button id="simulation" class="mdl-button mdl-js-button mdl-button--raised genre-button">
+                    <button name="genre" id="simulation" value='Simulation' class="mdl-button mdl-js-button mdl-button--raised genre-button">
                         Simulation
                     </button>
                 </div>
                 <div class="genre-category">
-                    <button id="puzzle" class="mdl-button mdl-js-button mdl-button--raised genre-button">
+                    <button name="genre" id="puzzle" value='Puzzle' class="mdl-button mdl-js-button mdl-button--raised genre-button">
                         Puzzle
                     </button>
                 </div>
-                <div class="genre-category">
-                    <button id="racing" class="mdl-button mdl-js-button mdl-button--raised genre-button">
+                <div name="genre"class="genre-category">
+                    <button name="genre" id="racing" value='Racing' class="mdl-button mdl-js-button mdl-button--raised genre-button">
                         Racing
                     </button>
                 </div>
                 <div class="genre-category">
-                    <button id="sports" class="mdl-button mdl-js-button mdl-button--raised genre-button">
+                    <button name="genre" id="sports" value='Sports' class="mdl-button mdl-js-button mdl-button--raised genre-button">
                         Sports
                     </button>   
                 </div>
